# mcp-db-schema-tools

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
src/mcp_db_schema_tools/: __init__.py  __main__.py  schema_converter.py  schema_validator.py  server.py
tests/: test_schema_converter.py
